feat: add orders and run through them in the end phase and firing phase