@@ -22,7 +22,6 @@ import megamek.common.autoresolve.component.FormationTurn;
 import megamek.common.enums.GamePhase;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class FiringPhase extends PhaseHandler {
 
@@ -43,16 +42,15 @@ public class FiringPhase extends PhaseHandler {
 
 
             if (turn instanceof FormationTurn formationTurn) {
-                var player = getSimulationManager().getGame().getPlayer(formationTurn.playerId());
+                for (var formation : getContext().getActiveFormations(formationTurn.playerId())) {
+                    if (!formation.isEligibleForPhase(getContext().getPhase())) {
+                        continue;
+                    }
 
-                getSimulationManager().getGame().getActiveFormations(player)
-                    .stream()
-                    .filter(f -> f.isEligibleForPhase(getSimulationManager().getGame().getPhase())) // only eligible formations
-                    .findAny()
-                    .map(this::attack)
-                    .stream()
-                    .flatMap(Collection::stream)
-                    .forEach(this::standardUnitAttacks); // add engage and control action
+                    for (var atk : attack(formation)) {
+                        standardUnitAttacks(atk);
+                    }
+                }
             }
         }
     }
@@ -89,6 +87,10 @@ public class FiringPhase extends PhaseHandler {
     private List<AttackRecord> attack(Formation actingFormation) {
         var target = this.selectTarget(actingFormation);
 
+        if (target.isEmpty()) {
+            return Collections.emptyList();
+        }
+
         List<Integer> unitIds = new ArrayList<>();
         for (int i = 0; i < actingFormation.getUnits().size(); i++) {
             unitIds.add(i);
@@ -102,39 +104,58 @@ public class FiringPhase extends PhaseHandler {
     private List<Formation> selectTarget(Formation actingFormation) {
         var game = getSimulationManager().getGame();
         var player = game.getPlayer(actingFormation.getOwnerId());
-        var canBeTargets = getSimulationManager().getGame().getActiveFormations().stream()
-            .filter(Formation::isDeployed)
-            .filter(f -> game.getPlayer(f.getOwnerId()).isEnemyOf(player))
-            .filter(f -> f.getId() != actingFormation.getTargetFormationId())
-            .collect(Collectors.toList());
-        Collections.shuffle(canBeTargets);
+        var canBeTargets = new HashSet<Formation>();
+        var orders = getContext().getOrders().getOrders(actingFormation.getOwnerId());
 
-        var mandatoryTarget = game.getFormation(actingFormation.getTargetFormationId());
-        mandatoryTarget.ifPresent(formation -> canBeTargets.add(0, formation));
+        for (var order : orders) {
+            if (order.isEligible(getContext())) {
+                switch (order.getOrderType()) {
+                    case ATTACK_TARGET -> {
+                        if (order.getTargetId() != -1) {
+                            var target = game.getFormation(order.getTargetId());
+                            target.ifPresent(canBeTargets::add);
+                        }
+                    }
+                    case ATTACK_TARGET_NOT_WITHDRAWING -> getSimulationManager().getGame().getActiveDeployedFormations().stream()
+                        .filter(f -> game.getPlayer(f.getOwnerId()).isEnemyOf(player))
+                        .filter(f -> !f.isWithdrawing())
+                        .forEach(canBeTargets::add);
+
+                    case ATTACK_TARGET_WITHDRAWING -> getSimulationManager().getGame().getActiveDeployedFormations().stream()
+                        .filter(f -> game.getPlayer(f.getOwnerId()).isEnemyOf(player))
+                        .filter(Formation::isWithdrawing)
+                        .forEach(canBeTargets::add);
+                }
+            }
+        }
+
+        // sticky target
+        game.getFormation(actingFormation.getTargetFormationId())
+            .ifPresent(canBeTargets::add);
+
+        if (canBeTargets.size() < 4) {
+            getSimulationManager().getGame().getActiveDeployedFormations().stream()
+                .filter(f -> game.getPlayer(f.getOwnerId()).isEnemyOf(player))
+                .forEach(canBeTargets::add);
+        }
 
         if (canBeTargets.isEmpty()) {
-            return List.of();
+            return Collections.emptyList();
         }
 
         if (canBeTargets.size() == 1) {
-            return canBeTargets;
+            return new ArrayList<>(canBeTargets);
         }
 
         return bestTargetOrPreviousTarget(actingFormation, canBeTargets);
+
     }
 
-    private List<Formation> bestTargetOrPreviousTarget(Formation actingFormation, List<Formation> targets) {
-        var game = getSimulationManager().getGame();
-        var previousTarget = game.getFormation(actingFormation.getTargetFormationId());
+    private List<Formation> bestTargetOrPreviousTarget(Formation actingFormation, Set<Formation> targets) {
+        var previousTargetId = actingFormation.getTargetFormationId();
 
-        if (previousTarget.isEmpty()) {
-            return List.of(targets.get(0));
-        }
+        var pickTarget = new LinkedList<Formation>();
 
-        var previousTargetFormation = previousTarget.get();
-
-        var pickTarget = new ArrayList<Formation>();
-        var previousTargetId = previousTargetFormation.getId();
         Optional<Formation> priorityTarget = Optional.empty();
         for (var f : targets) {
             var distance = actingFormation.getPosition().coords().distance(f.getPosition().coords());
@@ -162,7 +183,11 @@ public class FiringPhase extends PhaseHandler {
 
         Collections.shuffle(pickTarget);
         priorityTarget.ifPresent(formation -> pickTarget.add(0, formation));
-
-        return List.of(targets.get(0));
+        var iterator = targets.iterator();
+        if (iterator.hasNext()) {
+            var target = iterator.next();
+            return List.of(target);
+        }
+        return Collections.emptyList();
     }
 }
